# agar

./: .env.template  LICENSE  README.md  env.py  game_config.json  index.html  master.py  pyproject.toml  run_master.py  run_server.py  server.py
client/: index.html
client/css/: style.css
client/js/: config.js  game.js  input.js  network.js  renderer.js  state.js
master/: config.py  main.py
server/: __init__.py  bot.py  commands.py  config.py  entities.py  events.py  game_world.py  main.py
